manifests/healer-deployment.yml
#
# Copyright (c) 2018 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: healer
spec:
  selector:
    matchLabels:
      app: healer
  replicas: 1
  template:
    metadata:
      labels:
        app: healer
    spec:
      serviceAccountName: healer
      containers:
      - name: healer
        image: autoheal/alert-healer:0.0.0
        securityContext:
          runAsUser: 1000000000 # Must match the UID in the image.
